# django-logger

./: LICENSE  README.md  pyproject.toml
config/: settings.py
django_logger/: asgi.py  settings.py  urls.py  wsgi.py
